Fix margin for title-project class to ensure consistent spacing across breakpoints

--- a/portfolio-saintsfilms-tsx/src/assets/caseslist.css
+++ b/portfolio-saintsfilms-tsx/src/assets/caseslist.css
@@ -69,9 +69,14 @@
   font-weight: 400;
   font-size: clamp(70px, 8vw, 120px);
   line-height: 1.1;
-  margin: 20px 20px 30px 20px;
+  margin: 20px 20px 30px 0px;
   text-align: left;
   transition: 1s;
+}
+@media (min-width: 600px) {
+  .title-project {
+    margin: 20px 20px 30px 20px;
+  }
 }
 .container-project {
   height: max-content;
